--- a/Chalkable.Web/assets/jade/controls/action-link.jade
+++ b/Chalkable.Web/assets/jade/controls/action-link.jade
@@ -14,6 +14,19 @@ mixin ActionLinkWithPrepend(controller, action, prependParams)
     A.action-link(attributes)
         block
 
+// requires: actionLinkModel instanceOf chlk.models.common.ActionLinkModel
+mixin ActionLinkWithModel(actionLinkModel)
+    classesNames = actionLinkModel.getClassesNames() || []
+    if actionLinkModel.isPressed()
+        -classesNames.push('pressed')
+    +ActionLinkWithPrepend(actionLinkModel.getControllerName(), actionLinkModel.getActionName(), actionLinkModel.getArgs()
+    )(class = classesNames && classesNames.length > 0 ? classesNames.join(' ') : '')(attributes)=actionLinkModel.getTitle()
+
+// requires: actionLinksModel instanceOf ArrayOf(chlk.models.common.ActionLinkModel)
+mixin ActionLinkList(actionLinksModel)
+    each item in actionLinksModel
+        +ActionLinkWithModel(item)
+
 mixin  ActionLinkButton(controller, action)
     span.chlk-button.action-button(attributes)
         span
