--- a/Chalkable.Web/assets/jade/activities/attendance/StudentAttendance.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/StudentAttendance.jade
@@ -10,7 +10,7 @@ student = self.getStudent();
     +Hidden('type', value)
     +Hidden('classperiodid', self.getClassPeriodId().valueOf())
     +Hidden('attendancereasonid', reason && reason.getId().valueOf())
-    +Hidden('date', self.getDate().format('mm-dd-yy'))
+    +Hidden('date', self.getDate().toStandardFormat())
     +Hidden('attendanceReasonDescription', reason && reason.getDescription())
     .attendance-option
         =(reason ? reason.getDescription() : '')
