--- a/Chalkable.Web/assets/sass/partials/main/profile/_class_profile_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_class_profile_attendance.scss
@@ -15,7 +15,7 @@ BODY {
               }
             }
             .people-list-container{
-              #all-present-link{
+              #all-present-link, .attendance-option{
                 color: #957633 !important;
               }
               .attendance-combo{
