--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -10,6 +10,8 @@
 @import "partials/main/profile/_profile";
 @import "partials/main/profile/_profile_calendar";
 @import "partials/main/profile/_class_profile_info";
+@import "partials/main/profile/_class_profile_attendance";
+
 
 @import "partials/main/_setup";
 @import "partials/main/_admin";
