--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -1,49 +1,49 @@
 .students-list.loader-container
-    topData = self.getTopData();
-    topItems = topData.getTopItems();
-    selectedId = topData.getSelectedItemId();
-    valuesEnum = chlk.models.attendance.AttendanceTypeEnum;
-    +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'attendance', 'classList')(
-        selectedItemId=selectedId ? selectedId.valueOf() : ""
-    ).classes-bar
+    topData = self.getTopData()
+    topItems = topData.getTopItems()
+    selectedId = topData.getSelectedItemId()
+    valuesEnum = chlk.models.attendance.AttendanceTypeEnum
+    additionalParams = self.getAdditionalParams
+    if(self.hasLeftRightToolBar())
+        +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'attendance', 'classList')(
+            selectedItemId=selectedId ? selectedId.valueOf() : ""
+        ).classes-bar
     .loader
     .action-bar.not-transparent.buttons
         .container.panel-bg
             .left.no-border
+                +ActionLinkList(self.getLinksDataForLeftSide())
                 +DatePicker('attendanceDate', self.getDate())(
                     data-options={
                         showOtherMonths: true,
                         selectOtherMonths: true
                     },
-                    data-controller="attendance",
+                    data-controller= "attendance",
                     data-action="classList",
-                    data-params=selectedId ? [selectedId.valueOf()] : null
+                    data-params=selectedId ? [selectedId.valueOf()].concat(additionalParams) : null
                 )#attendance-date.tb-date-picker
+                -console.log('tests')
             .right
-                +ActionLink('attendance', 'classList').pressed
-                    =Msg.List
-                +ActionLink('attendance', 'classList')
-                    =Msg.Room
-                +ActionLink('attendance', 'classList')
-                    =Msg.Card
+                +ActionLinkList(self.getLinksDataForRightSide())
     .people-list-container.not-transparent
         items = self.getItems()
         .top.panel-bg
             if(self.getItems().length > 0)
-                +ActionLink('attendance', 'markAll',
-                    [selectedId.valueOf(), self.getItems()[0].getClassPeriodId().valueOf(), self.getDate().format('mm-dd-yy')]
+                +ActionLinkWithPrepend('attendance', 'markAll',
+                    [selectedId.valueOf(), self.getItems()[0].getClassPeriodId().valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
                 )#all-present-link=Msg.Mark_all_Present
         .action-bar.buttons.filter
             .container.panel-bg
                 .left
-                    +ActionLink('attendance', 'sortStudents', 'false')(class=self.isByLastName()?"":"pressed").action-button.first-last=Msg.First_name
-                    +ActionLink('attendance', 'sortStudents', true)(class=self.isByLastName()?"pressed":"").action-button.first-last=Msg.Last_name
+                    +ActionLinkWithPrepend('attendance', 'sortStudents', ['false'].concat(additionalParams))(class=self.isByLastName()?"":"pressed").action-button.first-last=Msg.First_name
+                    +ActionLinkWithPrepend('attendance', 'sortStudents', [true].concat(additionalParams))(class=self.isByLastName()?"pressed":"").action-button.first-last=Msg.Last_name
         .grid-container.loader-container
             +ListView(self.getItems())(
                 selectedIndex = 0
             )#class-attendance-list-panel.people-list
                 needSuggestion = self.getItems().filter(function(item){return item.getType() > valuesEnum.NA.valueOf()}).length == 0;
                 each item, i in self.getItems()
+                    -console.log(i)
                     needPresent = (i == 0 && item.getType() == valuesEnum.NA.valueOf());
                     .row(class=(i == 0 ? 'selected' : ''), index=i)
                         if needPresent
@@ -59,7 +59,7 @@
                                     .keyboard-suggestion
                                 div(class="container-" + item.getClassPersonId().valueOf())
                                     -item.setReasons(self.getReasons());
-                                    +RenderWith(item, chlk.templates.attendance.ClassAttendance)(
-                                        needPresent = needPresent
+                                    +RenderWith(item, self.getItemClassType())(
+                                        needPresent = needPresent,
                                     )
                         .clear
