--- a/Chalkable.Web/assets/jade/activities/class/ClassSchedule.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassSchedule.jade
@@ -1,7 +1,7 @@
 clazz = self.getClazz()
 .class-schedule.class-profile.loader-container
     .loader
-    +ProfileTopBar(self.buildActionLinkModels('schedule', clazz.getId()))
+    +ProfileTopBar(self, 'schedule')
     .info-view
         .top-panel
             h1.info.with-line
