--- a/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassInfo.jade
@@ -1,13 +1,14 @@
 sectionsInfo  = self.prepareDetailedInfo()
+classInfo = self.getClassInfo()
 .class-info.class-profile.loader-container
     .loader
-    +ProfileTopBar(self.buildActionLinkModels('info'))
+    +ProfileTopBar(self, 'info')
     .info-view
         .top-panel
             h1.info.with-line
                 .class-icon-container
-                    +ClassImg(self.getCourse(), 45, 80)
-                =self.getName()
+                    +ClassImg(classInfo.getCourse(), 45, 80)
+                =classInfo.getName()
             h2
                 div
         .detail-info
