--- a/Chalkable.Web/assets/jade/activities/class/ClassSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassSummary.jade
@@ -4,43 +4,44 @@ mixin IfBlock_(items, i, index)
             .image-container
                 +PersonImg(items[i+index], 64)
 
+classSummary = self.getClassSummary()
 .class-info.class-profile.loader-container
     .loader
-    +ProfileTopBar(self.buildActionLinkModels('details'))
+    +ProfileTopBar(self, 'details')
     .info-view.summary-view
         #top-summary-panel
             #avatar-photo-conainer
                 .images-wrapper
                     TABLE
                         TBODY
-                            each student,i in self.getStudents()
+                            each student,i in classSummary.getStudents()
                                 if i % 4 == 0
                                     TR
-                                        +IfBlock_(self.getStudents(), i, 0)
-                                        +IfBlock_(self.getStudents(), i, 1)
-                                        +IfBlock_(self.getStudents(), i, 2)
-                                        +IfBlock_(self.getStudents(), i, 3)
+                                        +IfBlock_(classSummary.getStudents(), i, 0)
+                                        +IfBlock_(classSummary.getStudents(), i, 1)
+                                        +IfBlock_(classSummary.getStudents(), i, 2)
+                                        +IfBlock_(classSummary.getStudents(), i, 3)
             #student-info-panel
                 h1.info
                     .class-icon-container
-                        +ClassImg(self.getCourse(), 45, 80)
-                    =self.getName()
+                        +ClassImg(classSummary.getCourse(), 45, 80)
+                    =classSummary.getName()
                 h2.no-line
-                    +ActionLink('teachers', 'info', self.getTeacher().getId().valueOf())=self.getTeacher().getDisplayName()
-                    | - #{self.getRoom() && self.getRoom().getDescription()}
+                    +ActionLink('teachers', 'info', classSummary.getTeacher().getId().valueOf())=classSummary.getTeacher().getDisplayName()
+                    | - #{classSummary.getRoom() && classSummary.getRoom().getDescription()}
                 .glance-container
-                    if(self.getClassAverageBox())
-                        +GlanceBox(null, null, self.buildCommonGlanceBoxData(self.getClassAverageBox(), Msg.Class_average))
-                    if(self.getClassAttendanceBox())
-                        +GlanceBox(null, null, self.buildCommonGlanceBoxData(self.getClassAttendanceBox(), Msg.Attendance_count))
-                    if(self.getClassDisciplineBox())
+                    if(classSummary.getClassAverageBox())
+                        +GlanceBox(null, null, self.buildCommonGlanceBoxData(classSummary.getClassAverageBox(), Msg.Class_average))
+                    if(classSummary.getClassAttendanceBox())
+                        +GlanceBox(null, null, self.buildCommonGlanceBoxData(classSummary.getClassAttendanceBox(), Msg.Attendance_count))
+                    if(classSummary.getClassDisciplineBox())
                         +GlanceBox(null, null, self.buildDisciplineGlanceBoxData(), null)
-                    if(self.getClassSize())
-                        +GlanceBox(null, null, {value: self.getClassSize(), title: Msg.Class_size}, 'brown')
+                    if(classSummary.getClassSize())
+                        +GlanceBox(null, null, {value: classSummary.getClassSize(), title: Msg.Class_size}, 'brown')
         .today-work-panelf
             h2=Msg.Upcoming_assignments
             .period-toolbar
-                if self.getAnnouncementsByDate()
-                    +LeftRightToolbar(self.getAnnouncementsByDate(), chlk.templates.announcement.AnnouncementsByDate)(hideArrows)
+                if classSummary.getAnnouncementsByDate()
+                    +LeftRightToolbar(classSummary.getAnnouncementsByDate(), chlk.templates.announcement.AnnouncementsByDate)(hideArrows)
         .today-work-panel
             h2.stats=Msg.Stats_and_facts
