--- a/Chalkable.Web/assets/jade/activities/profile/student-info-page.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/student-info-page.jade
@@ -1,6 +1,6 @@
 .teacher-info.info-page.view-mode.loader-container
     .loader
-    +ProfileTopBar(self.getActionLinksData())
+    +ProfileTopBar(self, 'info')
     +ProfileInfoView(self.user)
         //todo parent section
     +ProfileInfoForm('students', self.user)
