--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -387,6 +387,46 @@ TEXTAREA.animated-textarea{
 
     }
   }
+
+  .separator{
+    background: url(images/common/dialog-separator-br.png) bottom no-repeat;
+    color: #7c7c7c;
+    text-shadow: 1px 1px 0 white;
+    text-align: center;
+    padding: 5px 10px;
+  }
+
+  .big-text{
+    font: bold 16px Arial;
+  }
+
+  .small-text{
+    font: normal 12px Georgia;
+    font-style: italic;
+  }
+
+  .grey-button{
+    text-align: center;
+    min-width: 57px;
+    height: 12px;
+    padding: 10px;
+    margin: 5px auto 0;
+    @include border-radius(4px);
+    @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
+    @include box-shadow(0 1px 0 0 #fff inset, 0 1px 2px 0px #999);
+    display: inline-block;
+    border: 1px solid #b3b3b3;
+    cursor: pointer;
+
+    &:hover{
+      @include background(linear-gradient(top, #e5e5e5, #d0d0d0));
+    }
+
+    &.disabled{
+      opacity: 0.7;
+      @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
+    }
+  }
 }
 
 .activity-model-wait, .loadind{
