--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -99,6 +99,12 @@ BODY {
       DIV#content-wrapper{
         #main {
           .announcement-form{
+            .action-bar{
+              .container{
+                overflow: hidden;
+              }
+            }
+
             .recipients-text{
               display: none;
               font-size: 12px;
